--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,4 +2,7 @@
   <h1 class="font-bold text-4xl">Welcome#index</h1>
   <p>Find me in app/views/welcome/index.html.erb</p>
   <p>Hola a todo el equipo</p>
+   <% if user_signed_in? %>
+   <%= link_to "Cerrar Sesion", destroy_user_session_path, method: :delete %>
+   <% end %>
 </div>
