--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,14 @@
-<div>
-  <h1 class="font-bold text-4xl">Welcome#index</h1>
-  <p>Find me in app/views/welcome/index.html.erb</p>
-  <p>Hola a todo el equipo</p>
-   <% if user_signed_in? %>
+
+<div>  
+  <%= link_to "Departamenos", departamentos_path %>
+  <br> <!-- Salto de línea -->
+  <%= link_to "Areas", areas_path %>
+  <br> <!-- Salto de línea -->
+  <%= link_to "Formulario", formularios_path %>
+  <br> <!-- Salto de línea -->
+  <% if user_signed_in? %>
    <%= link_to "Cerrar Sesion", destroy_user_session_path, method: :delete %>
    <% end %>
 </div>
+
+<div class="my-4 border-t border-gray-300"></div>
