--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,13 @@
   </head>
 
   <body>
+    <div class="">
+      navbar
+    </div>
+    <div class="">
     <main class="container mx-auto mt-28 px-5 flex">
       <%= yield %>
     </main>
+    </div>
   </body>
 </html>
