--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,12 @@
   </head>
 
   <body>
-    <%= render "/shared/navbar" %>
-    <div class="">
+    <% unless controller_name == 'sessions' && action_name == 'new' %>
+      <%= render "/shared/navbar" %>
+    <% end %>
+
     <main class="container mx-auto mt-0 px-5 flex h-full">
       <%= yield %>
     </main>
-    </div>
   </body>
 </html>
