--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,94 @@
-<h2>Sign up</h2>
+<section class="flex items-center justify-center min-h-screen bg-gray-50 dark:bg-gray-900">
+  <div class="flex">   
+    <div style="max-width: 800px; margin-right: 100px; background-color: #fff; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+      <div style="padding: 20px;">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+        <h1 style="font-size: 1.5rem; font-weight: bold; text-align: center; margin-bottom: 20px;">Usuarios</h1>
+        <table style="width: 100%; border-collapse: collapse; margin-bottom: 20px;">
+          <thead>
+            <tr style="border-bottom: 2px solid #ddd; background-color: #f9f9f9;">
+              <th style="padding: 10px; text-align: left;">Nombre</th>
+              <th style="padding: 10px; text-align: left;">Rol</th>
+              <th style="padding: 10px; text-align: left;">Carrera</th>
+              <th style="padding: 10px; text-align: left;">Acciones</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% 10.times do %>
+              <tr style="border-bottom: 1px solid #ddd;">
+                <td style="padding: 10px;"><%= ('A'..'Z').to_a.sample(5).join %></td>
+                <td style="padding: 10px;"><%= ['Auditado', 'Auditor'].sample %></td>
+                <td style="padding: 10px;"><%= ['Sistemas', 'Industrial'].sample %></td>
+                <td style="padding: 10px;">
+                      <button style="background-color: #e74c3c; color: #fff; padding: 8px 12px; border: none; border-radius: 10px; cursor: pointer;">Eliminar</button>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    
+    <div style="width: 500px; margin: auto;">
+      <div class="bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700 flex flex-col items-center justify-center">
+        <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
+          <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white text-center">
+            Ingresar
+          </h1>
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "space-y-4 md:space-y-6" }) do |f| %>
+            <%= render "devise/shared/error_messages", resource: resource %>
+            
+          <div class="field">
+            <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Nombre</label><br />
+            <input type="text" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+          </div>
+          
+          <div class="field">
+              <%= f.label :Correo_Eletronico, class: "block mb-2 text-sm font-medium text-gray-900 dark:text-white" %><br />
+              <%= f.email_field :email, class: "bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500", autofocus: true, autocomplete: "email" %>
+            </div>
+
+          <div class="field">
+            <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Rol</label><br />
+            <input type="checkbox" class="mr-2">
+            <label class="text-sm font-medium text-gray-900 dark:text-white">Auditor</label>
+            <input type="checkbox" class="mr-2">
+            <label class="text-sm font-medium text-gray-900 dark:text-white">Auditado</label>
+          </div>
+
+          <div class="field">
+            <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Carrera</label><br />
+            
+            <select class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+              <option value="Sistemas">Sistemas</option>
+              <option value="Industrial">Industrial</option>
+            </select>
+            </div>
+
+            
+
+            <div class="field">
+              <%= f.label :Contraseña, class: "block mb-2 text-sm font-medium text-gray-900 dark:text-white" %>
+              <% if @minimum_password_length %>
+                <em class="text-xs text-gray-600">(<%= @minimum_password_length %> caracteres mínimo)</em>
+              <% end %><br />
+              <%= f.password_field :password, class: "bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500", autocomplete: "new-password" %>
+            </div>
+
+            <div class="field">
+              <%= f.label :Confirmar_Contraseña, class: "block mb-2 text-sm font-medium text-gray-900 dark:text-white" %><br />
+              <%= f.password_field :password_confirmation, class: "bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500", autocomplete: "new-password" %>
+            </div>
+
+            <div class="actions">
+              <%= f.submit "Registrar", class: "w-full text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" %>
+            </div>
+          <% end %>
+
+          <%= render "devise/shared/links" %>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</section>
