--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,21 +1,27 @@
-<div class="flex justify-center items-center h-screen w-screen bg-contain bg-center bg-no-repeat background-size" style="background-image: url('<%= asset_path 'EntradaTec.jpg' %>'); background-size: 100% 100%;">
-  <div class="grid grid-cols-2 gap-8">
-    <div>
-      <%= link_to "Departamentos", departamentos_path, class: "bg-blue-500 text-white py-6 px-8 rounded-lg hover:bg-blue-700 text-2xl w-full block text-center" %>
-    </div>
+<body class="bg-gradient-to-r from-purple-200 to-blue-600">
 
-    <div>
-      <%= link_to "Áreas", areas_path, class: "bg-blue-500 text-white py-6 px-8 rounded-lg hover:bg-blue-700 text-2xl w-full block text-center" %>
-    </div>
+  <div class="flex flex-col items-center min-h-screen w-screen">
+    <div class="mb-5 w-1/4 h-1/4">
 
-    <div>
-      <%= link_to "Formularios", formularios_path, class: "bg-blue-500 text-white py-6 px-8 rounded-lg hover:bg-blue-700 text-2xl w-full block text-center" %>
+      <div class="text-white text-3xl font-bold mt-10" style="text-align: justify;">
+        Bienvenido a AUDITEC
+      </div>
+      <div class="text-white text-sm mt-2" style="text-align: justify;">
+        Te damos la bienvenida a Auditec, el nuevo servicio de gestión de auditorías en el cual se cuenta con un sistema digital optimizado para la realización de las auditorías en el Instituto Tecnológico de Tijuana. Selecciona un botón para continuar o deslízate hacia abajo para ver las instrucciones.
+      </div>
     </div>
+    <div class="grid grid-cols-2 gap-8 mt-8">
+      <div>
+        <button type="button" class="text-white bg-gradient-to-br from-green-400 to-blue-600 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center w-full block border border-black">
+          Auditores
+        </button>
+      </div>
 
-    <div>
-      <% if user_signed_in? %>
-        <%= link_to "Cerrar Sesión", destroy_user_session_path, method: :delete, class: "bg-blue-500 text-white py-6 px-8 rounded-lg hover:bg-blue-700 text-2xl w-full block text-center" %>
-      <% end %>
+      <div>
+        <button type="button" class="text-white bg-gradient-to-br from-green-400 to-blue-600 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center w-full block border border-black">
+          Auditados
+        </button>
+      </div>
     </div>
   </div>
-</div>
+</body>
