Flujo Auditor y Auditado

--- a/app/views/formularios/show.html.erb
+++ b/app/views/formularios/show.html.erb
@@ -6,7 +6,9 @@
 
     <%= render @formulario %>
 
-    <%= link_to "Edit this formulario", edit_formulario_path(@formulario), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+    <% if current_user.role_name.in?(['admin', 'jefe']) %>
+      <%= link_to "Edit this formulario", edit_formulario_path(@formulario), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+    <% end %>
     <div class="inline-block ml-2">
       <%= button_to "Destroy this formulario", formulario_path(@formulario), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
     </div>
