--- a/app/views/asignacions/index.html.erb
+++ b/app/views/asignacions/index.html.erb
@@ -8,7 +8,51 @@
     <%= link_to "New asignacion", new_asignacion_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
-  <div id="asignacions" class="min-w-full">
-    <%= render @asignacions %>
-  </div>
+  <table class="min-w-full bg-white border border-gray-200">
+    <thead>
+      <tr>
+      <th class="py-2 px-4 border-b border-gray-200">Numero</th>
+        <th class="py-2 px-4 border-b border-gray-200">Date</th>
+        <th class="py-2 px-4 border-b border-gray-200">Descripcion</th>
+        <th class="py-2 px-4 border-b border-gray-200"> </th>
+      </tr>
+    </thead>
+  <tbody>
+    <% @asignacions.each do |asig| %>
+      <tr>
+        <td class="py-2 px-4 border-b border-gray-200"><%= asig.id %></td>
+        <td class="py-2 px-4 border-b border-gray-200"><%= asig.date %></td>
+        <td class="py-2 px-4 border-b border-gray-200"><%= asig.descripcion %></td>
+        <td class="py-2 px-4 border-b border-gray-200 text-blue-500"><%= link_to 'Detalles', asig %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+    <br> <!-- Salto de línea -->
+    <div class="flex justify-between items-center">
+      <h1 class="font-bold text-4xl">Auditorias</h1>
+    </div>
+    <br> <!-- Salto de línea -->
+
+  <table class="min-w-full bg-white border border-gray-200">
+    <thead>
+      <tr>
+      <th class="py-2 px-4 border-b border-gray-200">Numero</th>
+        <th class="py-2 px-4 border-b border-gray-200">Proceso</th>
+        <th class="py-2 px-4 border-b border-gray-200">Fecha</th>
+        <th class="py-2 px-4 border-b border-gray-200"> </th>
+      </tr>
+    </thead>
+  <tbody>
+    <% @formularios.each do |formu| %>
+      <tr>
+        <td class="py-2 px-4 border-b border-gray-200"><%= formu.noAuditoria %></td>
+        <td class="py-2 px-4 border-b border-gray-200"><%= formu.proceso %></td>
+        <td class="py-2 px-4 border-b border-gray-200"><%= formu.fecha %></td>
+        <td class="py-2 px-4 border-b border-gray-200 text-blue-500"><%= link_to 'Detalles', formu %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 </div>
