--- a/app/views/departamentos/show.html.erb
+++ b/app/views/departamentos/show.html.erb
@@ -54,7 +54,7 @@
   <tbody>
     <% @formularios.each do |formu| %>
       <tr>
-        <td class="py-2 px-4 border-b border-gray-200"><%= formu.id %></td>
+        <td class="py-2 px-4 border-b border-gray-200"><%= formu.noAuditoria %></td>
         <td class="py-2 px-4 border-b border-gray-200"><%= formu.proceso %></td>
         <td class="py-2 px-4 border-b border-gray-200"><%= formu.fecha %></td>
         <td class="py-2 px-4 border-b border-gray-200 text-blue-500"><%= link_to 'Detalles', formu %></td>
