--- a/app/views/formularios/index.html.erb
+++ b/app/views/formularios/index.html.erb
@@ -5,10 +5,31 @@
 
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">Formularios</h1>
+    <% if current_user.role_name.in?(['admin', 'jefe']) %>
     <%= link_to "New formulario", new_formulario_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+    <% end %>
   </div>
 
   <div id="formularios" class="min-w-full">
-    <%= render @formularios %>
+    <table class="min-w-full bg-white border border-gray-200">
+    <thead>
+      <tr>
+      <th class="py-2 px-4 border-b border-gray-200">Numero</th>
+        <th class="py-2 px-4 border-b border-gray-200">Proceso</th>
+        <th class="py-2 px-4 border-b border-gray-200">Fecha</th>
+        <th class="py-2 px-4 border-b border-gray-200"> </th>
+      </tr>
+    </thead>
+  <tbody>
+    <% @formularios.each do |formu| %>
+      <tr>
+        <td class="py-2 px-4 border-b border-gray-200"><%= formu.noAuditoria %></td>
+        <td class="py-2 px-4 border-b border-gray-200"><%= formu.proceso %></td>
+        <td class="py-2 px-4 border-b border-gray-200"><%= formu.fecha %></td>
+        <td class="py-2 px-4 border-b border-gray-200 text-blue-500"><%= link_to 'Información Específica', informacion_especifica_formulario_path(formu.noAuditoria) %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
   </div>
 </div>
