--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,6 +22,7 @@
                 <td style="padding: 10px;"><%= ['Sistemas', 'Industrial'].sample %></td>
                 <td style="padding: 10px;">
                   <button style="background-color: #e74c3c; color: #fff; padding: 8px 12px; border: none; border-radius: 10px; cursor: pointer;">Eliminar</button>
+                  <button style="background-color: Purple; color: #fff; padding: 8px 12px; border: none; border-radius: 10px; cursor: pointer;">Modificar</button>
                 </td>
               </tr>
             <% end %>
