--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,24 +10,23 @@
 
 <body class="bg-gradient-to-r from-green-300 to-blue-600">
     <div class="flex flex-col items-center min-h-screen">
-        <div class="mb-5 w-1/2 md:w-1/4 h-1/4">
+        <div >
             <div class="text-white text-3xl md:text-4xl lg:text-5xl xl:text-4xl font-bold mt-8 text-lg text-center mb-6">
                 Bienvenido a AUDITEC
             </div>
-            <div class="text-white font-sans text-xl md:text-2xl lg:text-3xl xl:text-2xl text-center">
-                Te damos la bienvenida a Auditec, el nuevo servicio de gestión de auditorías en el cual se cuenta con un sistema digital optimizado para la realización de las auditorías en el Instituto Tecnológico de Tijuana. Selecciona un botón para continuar o deslízate hacia abajo para ver las instrucciones.
+            <div class="text-white font-sans text-xl md:text-2xl lg:text-3xl xl:text-2xl text-center max-w-screen-xl mx-auto">
+                Te damos la bienvenida a Auditec, el nuevo servicio de gestión de auditorías en el cual se cuenta con un sistema digital optimizado para la realización de las auditorías en el Instituto Tecnológico de Tijuana.
             </div>
+
         </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
         <br>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-8">
             <div class="flex flex-col items-center mb-8">
-                <!-- INSERTAR IMAGEN AQUÍ -->
-                <img src="ruta-de-la-imagen-1.jpg" alt="Imagen 1" class="w-full h-auto rounded-lg mb-4">
+            <!-- INSERTAR IMAGEN AQUÍ -->
+            <div class="max-w-md bg-white rounded-lg overflow-hidden shadow-lg">
+            <%= image_tag("Auditoria2.jpg", alt: "Logo", class: "w-50 h-50") %>
+           
+            </div>
                 <div class="text-white text-lg text-center">
                     <h2 class="font-bold mb-2">¿Qué es una Auditoría?</h2>
                     <p class="text-justify">Una auditoría es un examen sistemático de las actividades o procesos de una organización para asegurar que se están cumpliendo los estándares establecidos.</p>
@@ -36,8 +35,11 @@
 
             <div class="flex flex-col items-center mb-8">
                 <!-- INSERTAR IMAGEN AQUÍ -->
-                <img src="ruta-de-la-imagen-2.jpg" alt="Imagen 2" class="w-full h-auto rounded-lg mb-4">
-                <div class="text-white text-lg text-center">
+                <div class="max-w-md bg-white rounded-lg overflow-hidden shadow-lg">
+                <%= image_tag("Auditoria1.jpg", alt: "Logo", class: "w-50 h-50") %>
+               
+                </div>
+                        <div class="text-white text-lg text-center">
                     <h2 class="font-bold mb-2">Importancia de las Auditorías</h2>
                     <p class="text-justify">Las auditorías son cruciales para garantizar la transparencia, eficiencia y cumplimiento de normativas en las operaciones de una organización, asegurando la mejora continua.</p>
                 </div>
@@ -47,20 +49,25 @@
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-8">
             <div class="flex flex-col items-center mb-8">
                 <div class="text-white text-lg text-center mb-4">
-                    <h2 class="font-bold mb-2">Título 3</h2>
-                    <p class="text-justify">Descripción del contenido que se encuentra a la izquierda.</p>
+                    <h2 class="font-bold mb-2">UN POCO DE AUDITEC </h2>
+                    <p class="text-justify">AUDITEC elimina la necesidad de papeleo engorroso al proporcionar una plataforma digital para los flujos de trabajo de auditoría. Desde la iniciación hasta la finalización, todo el proceso de auditoría está integrado de manera fluida, permitiendo una colaboración eficiente entre los miembros del equipo</p>
                 </div>
                 <!-- INSERTAR IMAGEN AQUÍ -->
-                <img src="ruta-de-la-imagen-3.jpg" alt="Imagen 3" class="w-full h-auto rounded-lg">
+                <div class="max-w-md bg-white rounded-lg overflow-hidden shadow-lg">
+                <%= image_tag("Auditoria3.png", alt: "Logo", class: "w-50 h-50") %>
+               
+                </div>
             </div>
 
-            <div class="flex flex-col items-center mb-8">
-                <!-- INSERTAR IMAGEN AQUÍ -->
-                <img src="ruta-de-la-imagen-4.jpg" alt="Imagen 4" class="w-full h-auto rounded-lg mb-4">
-                <div class="text-white text-lg text-center">
-                    <h2 class="font-bold mb-2">Título 4</h2>
-                    <p class="text-justify">Descripción del contenido que se encuentra a la derecha.</p>
-                </div>
+              <div class="flex flex-col items-center mb-8">
+              <!-- INSERTAR IMAGEN AQUÍ -->
+              <div class="max-w-md bg-white rounded-lg overflow-hidden shadow-lg">
+              <%= image_tag("Auditoria4.jpg", alt: "Logo", class: "w-50 h-50") %>    
+              </div>
+              <div class="text-white text-lg text-center">
+                <h2 class="font-bold mb-2">Monitoreo</h2>
+                <p class="text-justify">Mantente informado en cada etapa de la auditoría con capacidades de monitoreo en tiempo real. Sigue el progreso, identifica cuellos de botella y recibe actualizaciones instantáneas sobre el estado de la auditoría, asegurando una toma de decisiones oportuna e informada</p>
+              </div>
             </div>
         </div>
     </div>
