Cambios en vistas

--- a/app/views/asignacions/_form.html.erb
+++ b/app/views/asignacions/_form.html.erb
@@ -11,7 +11,9 @@
     </div>
   <% end %>
 
-  <p>Departamento: <%= @departamento_nombre %></p>
+  <div style="margin-top: 25px;">
+    <p>Departamento: <%= @departamento_nombre %></p>
+  </div>
 
   <div class="my-5">
     <%= form.label :date %>
@@ -23,10 +25,11 @@
     <%= form.text_field :descripcion, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
-  <div class="field">
+  <div class="field" style="margin-bottom: 25px;">
     <%= form.label :user_id, 'Auditor:' %>
     <%= form.collection_select(:user_id, User.auditors, :id, :nombre_completo, prompt: 'Seleccionar auditor') %>
-  </div>
+</div>
+
 
   <%= form.hidden_field :departamento_id, value: @departamento_id %>
 
