--- a/app/views/departamentos/show.html.erb
+++ b/app/views/departamentos/show.html.erb
@@ -1,74 +1,85 @@
 <div class="relative overflow-x-auto">
-  <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Asignaciones</h1>
-  </div>
-  <br> <!-- Salto de línea -->
+<h1 class="font-bold text-4xl text-black ml-10 text-white">Asignaciones</h1>
 
-  <div class="mx-auto">
-  <% if notice.present? %>
-    <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
-  <% end %>
+  <div class="flex items-center justify-center">
 
-  <%= render @departamento %>
-  
-  <!-- Botón para el formulario de asignacion -->
-  <%= link_to 'Crear Asignación', new_asignacion_path(departamento_id: @departamento.id, nombre: @departamento.nombre), class: 'bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded' %>
-  <br> <!-- Salto de línea -->
-
-  <table class="min-w-full bg-white border border-gray-200">
-    <thead>
-      <tr>
-      <th class="py-2 px-4 border-b border-gray-200">Numero</th>
-        <th class="py-2 px-4 border-b border-gray-200">Date</th>
-        <th class="py-2 px-4 border-b border-gray-200">Descripcion</th>
-        <th class="py-2 px-4 border-b border-gray-200"> </th>
-      </tr>
-    </thead>
-  <tbody>
-    <% @asignacions.each do |asig| %>
-      <tr>
-        <td class="py-2 px-4 border-b border-gray-200"><%= asig.id %></td>
-        <td class="py-2 px-4 border-b border-gray-200"><%= asig.date %></td>
-        <td class="py-2 px-4 border-b border-gray-200"><%= asig.descripcion %></td>
-        <td class="py-2 px-4 border-b border-gray-200 text-blue-500"><%= link_to 'Detalles', asig %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <div class="flex justify-center items-center h-full">
+    <div>
+      <h1 class="font-bold text-4xl text-white">Asignaciones</h1>
+    </div>
 
     <br> <!-- Salto de línea -->
-    <div class="flex justify-between items-center">
-      <h1 class="font-bold text-4xl">Auditorias</h1>
+
+    <div class="mx-auto">
+    <% if notice.present? %>
+      <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
+    <% end %>
+
+    <%= render @departamento %>
+    
+    <!-- Botón para el formulario de asignacion -->
+    <div class="">
+      <%= link_to 'Crear Asignación', new_asignacion_path(departamento_id: @departamento.id, nombre: @departamento.nombre), class: 'bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded' %>
     </div>
     <br> <!-- Salto de línea -->
 
-  <table class="min-w-full bg-white border border-gray-200">
-    <thead>
-      <tr>
-      <th class="py-2 px-4 border-b border-gray-200">Numero</th>
-        <th class="py-2 px-4 border-b border-gray-200">Proceso</th>
-        <th class="py-2 px-4 border-b border-gray-200">Fecha</th>
-        <th class="py-2 px-4 border-b border-gray-200"> </th>
-      </tr>
-    </thead>
-  <tbody>
-    <% @formularios.each do |formu| %>
-      <tr>
-        <td class="py-2 px-4 border-b border-gray-200"><%= formu.noAuditoria %></td>
-        <td class="py-2 px-4 border-b border-gray-200"><%= formu.proceso %></td>
-        <td class="py-2 px-4 border-b border-gray-200"><%= formu.fecha %></td>
-        <td class="py-2 px-4 border-b border-gray-200 text-blue-500"><%= link_to 'Detalles', formu %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+    <table class="min-w-full bg-white border border-gray-200">
+      <thead>
+        <tr>
+        <th class="py-2 px-4 border-b border-gray-200">Numero</th>
+          <th class="py-2 px-4 border-b border-gray-200">Date</th>
+          <th class="py-2 px-4 border-b border-gray-200">Descripcion</th>
+          <th class="py-2 px-4 border-b border-gray-200"> </th>
+        </tr>
+      </thead>
+    <tbody>
+      <% @asignacions.each do |asig| %>
+        <tr>
+          <td class="py-2 px-4 border-b border-gray-200"><%= asig.id %></td>
+          <td class="py-2 px-4 border-b border-gray-200"><%= asig.date %></td>
+          <td class="py-2 px-4 border-b border-gray-200"><%= asig.descripcion %></td>
+          <td class="py-2 px-4 border-b border-gray-200 text-blue-500"><%= link_to 'Detalles', asig %></td>
+        </tr>
+      <% end %>
+    </tbody>
+    </table>
 
-    <%= link_to "Edit this departamento", edit_departamento_path(@departamento), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <div class="inline-block ml-2">
-      <%= button_to "Destroy this departamento", departamento_path(@departamento), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
-    </div>
-    <%= link_to "Back to departamentos", departamentos_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+      <br> <!-- Salto de línea -->
+      <div class="flex justify-between items-center">
+        <h1 class="font-bold text-4xl">Auditorias</h1>
+      </div>
+      <br> <!-- Salto de línea -->
+
+    <table class="min-w-full bg-white border border-gray-200">
+      <thead>
+        <tr>
+        <th class="py-2 px-4 border-b border-gray-200">Numero</th>
+          <th class="py-2 px-4 border-b border-gray-200">Proceso</th>
+          <th class="py-2 px-4 border-b border-gray-200">Fecha</th>
+          <th class="py-2 px-4 border-b border-gray-200"> </th>
+        </tr>
+      </thead>
+    <tbody>
+      <% @formularios.each do |formu| %>
+        <tr>
+          <td class="py-2 px-4 border-b border-gray-200"><%= formu.noAuditoria %></td>
+          <td class="py-2 px-4 border-b border-gray-200"><%= formu.proceso %></td>
+          <td class="py-2 px-4 border-b border-gray-200"><%= formu.fecha %></td>
+          <td class="py-2 px-4 border-b border-gray-200 text-blue-500"><%= link_to 'Detalles', formu %></td>
+        </tr>
+      <% end %>
+    </tbody>
+    </table>
+        <div style="margin-top: 30px; margin-bottom: 35px;">
+          <%= link_to "Edit this departamento", edit_departamento_path(@departamento), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+          <div class="inline-block ml-2">
+            <%= button_to "Destroy this departamento", departamento_path(@departamento), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
+          </div>
+          <%= link_to "Back to departamentos", departamentos_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+        </div>
+      </div>
 </div>
 
-
+</div>
+</div>
 
