Cambio de ruta en botones

--- a/app/views/formularios/show.html.erb
+++ b/app/views/formularios/show.html.erb
@@ -12,6 +12,6 @@
     <div class="inline-block ml-2">
       <%= button_to "Destroy this formulario", formulario_path(@formulario), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
     </div>
-    <%= link_to "Back to formularios", formularios_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+    <%= link_to "Back to formularios", departamento_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
   </div>
 </div>
