--- a/app/views/asignacions/show.html.erb
+++ b/app/views/asignacions/show.html.erb
@@ -10,6 +10,6 @@
     <div class="inline-block ml-2">
       <%= button_to "Destroy this asignacion", asignacion_path(@asignacion), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
     </div>
-    <%= link_to "Back to asignacions", asignacions_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+    <%= link_to "Back to departamentos", departamentos_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
   </div>
 </div>
